My own web page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Msmilee</title>
+    <link
+      rel="icon"
+      href="\Msmilee.github.io\image\icons8-smiling-face-with-smiling-eyes-48.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Smiley's World</title>
+    <style>
+      body{background-image: url("image/HF.jpg");}
+    </style>
   </head>
   <body>
-    <h1>Hello Github Page</h1>
-    <img src="https://github.com/CIT82/machelles-pub/blob/main/images/me.jpeg?raw=true" alt="Me" />
+    <h1>Welcome to my Page</h1>
+    <h2><i>This is my attempt at making my own webpage</h2></i>
+    <h3>I hope you enjoy!</h3>
+    <p>I took this class in hopes I could learn to use code and create my very own page, like this one!</p>
+    <img
+    src="https://github.com/CIT82/machelles-pub/blob/main/images/me.jpeg?raw=true"
+    alt="Me"></img>
+    <div>
+      <h1>Things I like to do</h1>
+      <a href=http://127.0.0.1:5500/Msmilee.github.io/contact.html><li>Hanging out with my kid</li></a>
+      <li>Watching Bob Ross paint</li>
+      <li>Gaming</li>
+    </div>
   </body>
 </html>
