--- a/index.html
+++ b/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="icon"
-      href="\Msmilee.github.io\image\icons8-smiling-face-with-smiling-eyes-48.png"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Smiley's World</title>
-    <style>
-      body{background-image: url("image/HF.jpg");}
-    </style>
+    <title>Week Five Hands On</title>
   </head>
   <body>
-    <h1>Welcome to my Page</h1>
-    <h2><i>This is my attempt at making my own webpage</h2></i>
-    <h3>I hope you enjoy!</h3>
-    <p>I took this class in hopes I could learn to use code and create my very own page, like this one!</p>
-    <img
-    src="https://github.com/CIT82/machelles-pub/blob/main/images/me.jpeg?raw=true"
-    alt="Me"></img>
-    <div>
-      <h1>Things I like to do</h1>
-      <a href=http://127.0.0.1:5500/Msmilee.github.io/contact.html><li>Hanging out with my kid</li></a>
-      <li>Watching Bob Ross paint</li>
-      <li>Gaming</li>
-    </div>
+    <select class="form-select" aria-label="Default select example">
+      <option selected>Click Here to See Drop Down Options!</option>
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>
+    <h1>Here is an Additional Type of Drop Down Menu</h1>
+    <select
+      class="form-select form-select-lg mb-3"
+      aria-label=".form-select-lg example"
+    >
+      <option selected>Open this select menu</option>
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>
+
+    <select
+      class="form-select form-select-sm"
+      aria-label=".form-select-sm example"
+    >
+      <option selected>Open this select menu</option>
+      <option value="1">Option One</option>
+      <option value="2">Option Two</option>
+      <option value="3">Option Three</option>
+    </select>
+    <h3>This creates two drop down menus with differing sizes</h3>
   </body>
 </html>
