--- a/addedpage.html
+++ b/addedpage.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
 
 <html lang="zxx">
 <head>
@@ -17,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <title>Orbitor - Software Company Template</title>
+  <title>My Created Page</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
@@ -103,8 +97,8 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">About Us</span>
-               <h1 class="is-capitalize text-lg">Our Company</h1>
+               <span class="text-white">About ME</span>
+               <h1 class="is-capitalize text-lg">Learn more about me</h1>
 
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
@@ -122,7 +116,7 @@
 		<div class="columns is-desktop is-justify-content-center">
 			<div class="column is-10-desktop">
 				<div class="heading has-text-centered">
-					<h2>We help entreprenuers <br>starts up and turn <span class="text-color">their ideas into</span> produtcs</h2>
+					<h2>Learn more about me <br>my hobbies <span class="text-color">my favorite things</span> my history</h2>
 				</div>
 			</div>
 		</div>
@@ -131,21 +125,21 @@
 				<div class="counter-item counter--style has-text-centered mb-5 mb-lg-0">
 					<i class="ti-thumb-up"></i>
 					<h2 class="mb-0 mt-3"><span class="counter-stat font-weight-bold">1730</span> +</h2>
-					<p>Project Done</p>
+					<p>Thumbs up</p>
 				</div>
 			</div>
 			<div class="column is-4-widescreen is-4-desktop is-6-tablet">
 				<div class="counter-item counter--style has-text-centered mb-5 mb-lg-0">
 					<i class="ti-face-smile"></i>
 					<h2 class="mb-0 mt-3"><span class="counter-stat font-weight-bold">125 </span>M </h2>
-					<p>User Worldwide</p>
+					<p>Smiles</p>
 				</div>
 			</div>
 			<div class="column is-4-widescreen is-4-desktop is-6-tablet">
 				<div class="counter-item counter--style has-text-centered">
 					<i class="ti-cup"></i>
 					<h2 class="mb-0 mt-3"><span class="counter-stat font-weight-bold">14</span></h2>
-					<p>Award Winner </p>
+					<p>Gold Stars </p>
 				</div>
 			</div>
 		</div>
@@ -157,13 +151,13 @@
 		<div class="columns is-desktop is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="feature-list">
-					<h2 class="mb-5">Gcolumnsing Software Company Since 2008</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint earum, eos esse non error facilis ad, maiores eum quae vero libero voluptas! Reprehenderit sunt similique, quae quidem voluptatem odit natus.</p>
+					<h2 class="mb-5">More information about me </h2>
+					<p>Some more random information about me and my likes or maybe favorite animals. Maybe favorite places...</p>
 
 					<ul class="list-unstyled mt-5 mb-6">
-						<li><i class="ti-check mr-4"></i>Create and manage any process for your business needs.</li>
-						<li><i class="ti-check mr-4"></i>Create and manage any process for your business needs.</li>
-						<li><i class="ti-check mr-4"></i>Full functionality without needed to install software.</li>
+						<li><i class="ti-check mr-4"></i>This is way too much about me.</li>
+						<li><i class="ti-check mr-4"></i>Still about me.</li>
+						<li><i class="ti-check mr-4"></i>Even more about me.</li>
 					</ul>
 
 					<a href="service.html" class="btn btn-main">All Services<i class="fa fa-angle-right ml-3"></i></a>
