--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,10 @@
 						<a class="navbar-link" href="about.html">About</a>
 					</li>
 
+                    <li class="navbar-item">
+						<a class="navbar-link" href="addedpage.html">Added Page</a>
+					</li>
+
 					<li class="navbar-item">
 						<a class="navbar-link" href="project.html">Portfolio</a>
 					</li>
