--- a/service.html
+++ b/service.html
@@ -67,6 +67,10 @@
 					</li>
 
 					<li class="navbar-item">
+						<a class="navbar-link" href="addedpage.html">Added Page</a>
+					</li>
+
+					<li class="navbar-item">
 						<a class="navbar-link" href="project.html">Portfolio</a>
 					</li>
 
