fixing drop down menu

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					 </li>
 					 
 					 <li class="navbar-item has-dropdown">
-						<a class="navbar-link">Zella</a>
+						<a class="navbar-link" href="goals.html">Zella</a>
 						<div class="navbar-dropdown">
 							<a class="navbar-item" href="zella.html">About Zella</a>
 							<a class="navbar-item" href="hobbies.html">Hobbies</a>
