--- a/images.html
+++ b/images.html
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <body>
         <h1> Images for webpage</h1>
-        <h2> Playing with image size and compression</h2>
-        <h1>Kind of small</h1>
-        
+        <h3> Playing with image size and compression</h3>
+        <h1>Small</h1>
+        <img src="/image/Lone Cypress resized-min.jpg" alt="smaller version" width="300" height="230">
+        <p>Mega Pixels - 1900 x 1354</p>
+        <p>Size went from 2.2 mbs to 439kbs</p>
+        <h1>Large</h1>
+        <img src="image/Grad resized-min.jpg" alt="large version" width="510" height="440">
+        <p>Mega Pixels - 3000 x 1965</p>
+        <p>Size went from 2.7mbs to 428 kbs</p>
+        <h1>Largest</h1>
+        <img src="image/resized theater (1)-min.jpg" alt="largest version" width="700" height="500">
+        <p>Mega Pixels - 1920 x 1282</p>
+        <p>Size went from 3mbs to 4.5 kbs</p>
     </body>
