updating landing pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					 </li>
 					 
 					 <li class="navbar-item has-dropdown">
-						<a class="navbar-link" href="goals.html">Zella</a>
+						<a class="navbar-link" href="zella.html">Zella</a>
 						<div class="navbar-dropdown">
 							<a class="navbar-item" href="zella.html">About Zella</a>
 							<a class="navbar-item" href="hobbies.html">Hobbies</a>
@@ -99,9 +99,9 @@
 						</div>
 					</li>
  
-					 <li class="navbar-item has-dropdown">
-						 <a class="navbar-link">Family</a>
-						 <div class="navbar-dropdown">
+					<li class="navbar-item has-dropdown">
+						<a class="navbar-link" href="family.html">Family</a>
+						<div class="navbar-dropdown">
 							 <a class="navbar-item" href="service.html">Father</a>
 							 <a class="navbar-item" href="pricing.html">Mother</a>
 							 <a class="navbar-item" href="blog-sidebar.html">Brother & Sister-in-Law</a>
