--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- theme meta -->
   <meta name="theme-name" content="orbitor-bulma" />
 
-  <title>Orbitor - Software Company Template</title>
+  <title>Smiley's World</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
@@ -51,7 +51,7 @@
 		 <nav class="navbar">
 			 <div class="navbar-brand">
 				 <a class="navbar-item" href="index.html">
-					 <img src="images/logo.png" alt="logo">
+					 <img src="images/smiley face trans.png" alt="logo" width="50" height="50">
 				 </a>
 				 <button role="button" class="navbar-burger burger" data-hidden="true" data-target="navigation">
 					 <span aria-hidden="true"></span>
@@ -69,7 +69,6 @@
 					 <li class="navbar-item has-dropdown">
 						<a class="navbar-link" href="zella.html">Zella</a>
 						<div class="navbar-dropdown">
-							<a class="navbar-item" href="zella.html">About Zella</a>
 							<a class="navbar-item" href="hobbies.html">Hobbies</a>
 							<a class="navbar-item" href="artwork.html">Artwork</a>
 							<a class="navbar-item" href="us.html">Us</a>
@@ -77,7 +76,7 @@
 					</li>
 					 
 					<li class="navbar-item has-dropdown">
-						<a class="navbar-link" href="goals.html">Goals</a>
+						<a class="navbar-link" href="service.html">Goals</a>
 						<div class="navbar-dropdown">
 							<a class="navbar-item" href="degree.html">Degree</a>
 							<a class="navbar-item" href="house.html">House</a>
@@ -88,7 +87,7 @@
 					</li>
 					 
 					<li class="navbar-item has-dropdown">
-						<a class="navbar-link" href="favorites.html">Favorites</a>
+						<a class="navbar-link" href="service.html">Favorites</a>
 						<div class="navbar-dropdown">
 							<a class="navbar-item" href="music.html">Music</a>
 							<a class="navbar-item" href="travel.html">Travel Spots</a>
@@ -100,7 +99,7 @@
 					</li>
  
 					<li class="navbar-item has-dropdown">
-						<a class="navbar-link" href="family.html">Family</a>
+						<a class="navbar-link" href="service.html">Family</a>
 						<div class="navbar-dropdown">
 							 <a class="navbar-item" href="service.html">Father</a>
 							 <a class="navbar-item" href="pricing.html">Mother</a>
