updates for zella pages

--- a/us.html
+++ b/us.html
@@ -120,8 +120,8 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">Hobbies</span>
-               <h1 class="is-capitalize text-lg">Zella's Hobbies</h1>
+               <span class="text-white">Us</span>
+               <h1 class="is-capitalize text-lg">Selfies of Us</h1>
 
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
@@ -144,21 +144,22 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zrollerblading.JPEG" width="500" height="250">
+					<img src="image/us3.jpg" width="500" height="250">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">Zella's Hobbies</span>
+					<span class="text-color has-text-weight-bold">Photos of Us</span>
 					<h3 class="text-md mb-5 mt-3">
 						
 					</h3>
-					<p>Zella has been an artist from the beginning. She is always coloring or drawing pictures 
-						for me to take to work and hang in my cubicle. She can often be found in the backyard with 
-						Grandpa, hunting for bugs or looking for the next backyard adventure. In the summer she becomes
-						 a fish and lives in our pool. She likes to listen to music and have dance parties with anyone 
-						 who will join. She is an avid gamer now, playing her Nintendo Switch. She currently enjoys playing 
-						 Zelda: Breath of the Wild. We make as many beach trips as possible, as we both love being by the water. 
+					<p>One of Zella’s favorite things to do together is take selfies. 
+						I cannot explain her fascination with it, but I do my best to 
+						keep up. She will always ask if we can do snapchat filters together. 
+						This is something I find annoying but suck it up for her regardless. 
+						We take lots of these together, however, I chose a few that have 
+						always been my favorites. She makes my whole soul smile. I really 
+						do love my little ball of sunshine.   
 					</p>
 				</div>
 			</div>
@@ -168,18 +169,17 @@
 			<div class="columns is-align-items-center">
 				<div class="column is-6-desktop">
 					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Beach Days</span>
+						<span class="text-color has-text-weight-bold">Christmas Spirit</span>
 						<h3 class="text-md mb-5 mt-3">
-							Beach Days Are Our Favorite
+							Christmas Selfies
 						</h3>
-						<p>We have had many beach days in her short 8 years. One favorite of hers is to build sandcastles. 
-						</p>
+						<p>This was taken Christmas morning of 2018</p>
 
 					</div>
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/zsandcastle.JPG" alt="" class="w-100">
+						<img src="image/us1.jpeg" alt="" class="w-100">
 					</div>
 				</div>
 			</div>
@@ -188,18 +188,16 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zfashionista.JPEG" alt="" class="w-100">
+					<img src="image/us2.jpeg" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info">
-					<span class="text-color has-text-weight-bold">Fashion</span>
+					<span class="text-color has-text-weight-bold">Halloween</span>
 					<h3 class="text-md mb-5 mt-3">
-						Fashionista
+						Halloween Selfies
 					</h3>
-					<p>There is never a time this little girl isn't wanting to 
-						wear dresses and put on make-up. She is always dressing up 
-				        and being the girly-girl she is. 
+					<p>Halloween is our favorite holiday. 
 					</p>
 				</div>
 			</div>
