--- a/artwork.html
+++ b/artwork.html
@@ -120,8 +120,8 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">Hobbies</span>
-               <h1 class="is-capitalize text-lg">Zella's Hobbies</h1>
+               <span class="text-white">Artwork</span>
+               <h1 class="is-capitalize text-lg">Zella's Artwork</h1>
 
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
@@ -144,21 +144,21 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zrollerblading.JPEG" width="500" height="250">
+					<img src="image/zart1.jpeg" width="500" height="250">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">Zella's Hobbies</span>
+					<span class="text-color has-text-weight-bold">Zella's Artwork</span>
 					<h3 class="text-md mb-5 mt-3">
 						
 					</h3>
-					<p>Zella has been an artist from the beginning. She is always coloring or drawing pictures 
-						for me to take to work and hang in my cubicle. She can often be found in the backyard with 
-						Grandpa, hunting for bugs or looking for the next backyard adventure. In the summer she becomes
-						 a fish and lives in our pool. She likes to listen to music and have dance parties with anyone 
-						 who will join. She is an avid gamer now, playing her Nintendo Switch. She currently enjoys playing 
-						 Zelda: Breath of the Wild. We make as many beach trips as possible, as we both love being by the water. 
+					<p>Zella has been an artist from the beginning. She is always drawing pictures 
+						for me to showcase at work on my cubicle walls. These pieces of artwork have
+						become quite popular with co-workers as well. She mostly paints and colors, 
+						but also likes using sidewalk chalk. She will usually create handmade birthday
+						 and thank you cards. They are truly one of my favorite things to keep after each 
+						 birthday. I still have all the ones she has made me.  
 					</p>
 				</div>
 			</div>
@@ -168,18 +168,18 @@
 			<div class="columns is-align-items-center">
 				<div class="column is-6-desktop">
 					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Beach Days</span>
+						<span class="text-color has-text-weight-bold">Mother's Day Goodies</span>
 						<h3 class="text-md mb-5 mt-3">
-							Beach Days Are Our Favorite
+							Mother's Day Art
 						</h3>
-						<p>We have had many beach days in her short 8 years. One favorite of hers is to build sandcastles. 
+						<p>The best part of being a mom is all the artistic goodies I get every holiday.  
 						</p>
 
 					</div>
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/zsandcastle.JPG" alt="" class="w-100">
+						<img src="image/zart2.jpeg" alt="" class="w-100">
 					</div>
 				</div>
 			</div>
@@ -188,18 +188,16 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zfashionista.JPEG" alt="" class="w-100">
+					<img src="image/zart3.jpeg" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info">
-					<span class="text-color has-text-weight-bold">Fashion</span>
+					<span class="text-color has-text-weight-bold">Abstract</span>
 					<h3 class="text-md mb-5 mt-3">
-						Fashionista
+						Zella's Abstract Art
 					</h3>
-					<p>There is never a time this little girl isn't wanting to 
-						wear dresses and put on make-up. She is always dressing up 
-				        and being the girly-girl she is. 
+					<p>Her abstract art is always one of my very favorites. 
 					</p>
 				</div>
 			</div>
