--- a/index.html
+++ b/index.html
@@ -113,9 +113,6 @@
 					 </li>
 				 </ul>
 				 <ul class="navbar-end ml-0">
-					 <li class="navbar-item">
-						<a href="contact.html" class="btn btn-solid-border">Get an estimate <i class="fa fa-angle-right ml-2"></i></a>
-					 </li>
 				 </ul>
 			 </div>
 		 </nav>
@@ -128,63 +125,19 @@
 		<div class="columns">
 			<div class="column is-8-widescreen is-10-desktop">
 				<div class="block">
-					<span class="is-uppercase text-sm letter-spacing ">The most powerful Solution</span>
-					<h1 class="my-4">Digital experience with Orbitor</h1>
-					<p class="mb-6">Veritatis earum aliquid doloribus molestias, eveniet molestiae aperiam ratione. Facilis velit voluptatibus impedit eligendi delectus illo earum voluptatum, laudantium molestiae!</p>
-
-					<a href="about.html" target="_blank" class="btn btn-main">Learn more about Digicon<i class="fa fa-angle-right ml-2"></i></a>
-
+					<span class="is-uppercase text-sm letter-spacing ">Welcome to my site</span>
+					<h1 class="my-4">Get to know me a little better</h1>
+					<p class="mb-6">My name is Machelle Smiley. I am a 38 year old single mom to my 8 year old daughter, Zella. I currently
+						work for the County in the Assessors office. I am working on my degree in hopes of promoting and building
+						a better life for me and my daughter. I took web development in order to learn how to build a page just like this one. 
+						I hope you check out the rest of the links and learn about what makes me, me. 
+					</p>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<section class="section about">
-	<div class="container">
-		<div class="columns is-multiline">
-			<div class="column is-4-widescreen is-6-tablet">
-				<div class="about-item">
-					<div class="icon">
-						<i class="ti-light-bulb"></i>
-					</div>
 
-					<div class="content">
-						<h4 class="mt-3 mb-3">Custom Effective Software development</h4>
-						<p class="mb-5">Saepe nulla praesentium eaque omnis perferendis a doloremque.</p>
-
-						<a href="#"> Read More </a>
-					</div>
-				</div>
-			</div>
-
-			<div class="column is-4-widescreen is-6-tablet">
-				<div class="about-item">
-					<div class="icon">
-						<i class="ti-panel"></i>
-					</div>
-					<div class="content">
-						<h4 class="mt-3 mb-3">Analyse Your Expensees On Every Device</h4>
-						<p class="mb-5">Saepe nulla praesentium eaque omnis perferendis a doloremque.</p>
-						<a href="#"> Read More </a>
-					</div>
-				</div>
-			</div>
-
-			<div class="column is-4-widescreen is-6-tablet">
-				<div class="about-item">
-					<div class="icon">
-						<i class="ti-headphone-alt"></i>
-					</div>
-					<div class="content">
-						<h4 class="mt-3 mb-3">Creating a dedicated IT business gcolumnsth</h4>
-						<p class="mb-5">Saepe nulla praesentium eaque omnis perferendis a doloremque.</p>
-						<a href="#"> Read More </a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
 <section class="section process">
 	<div class="container">
 		<div class="columns is-multiline is-desktop is-align-items-center">
@@ -231,20 +184,6 @@
 					</div>
 				</div>
 			</div>	
-		</div>
-	</div>
-</section>
-<section class="section cta">
-	<div class="container">
-		<div class="columns is-desktop">
-			<div class="column is-5-widescreen is-7-desktop">
-				<div class="cta-content bg-white rounded">
-					<h3 class="mb-5">Assurance Service In Software<span class="text-color-primary"> Testing</span> </h3>
-					<p class="mb-30">An Independent Validation and Testing services from SISAR. Helps to reduce software development efforts</p>
-					
-					<a href="project.html" class="btn btn-main">Portfolio<i class="fa fa-angle-right ml-2"></i></a>
-				</div>
-			</div>
 		</div>
 	</div>
 </section>
