updating image folder

--- a/hobbies.html
+++ b/hobbies.html
@@ -144,7 +144,7 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zrollerblading.JPEG" width="500" height="250">
+					<img src="image/zella/zrollerblading.JPEG" width="500" height="250">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
@@ -179,7 +179,7 @@
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/zsandcastle.JPG" alt="" class="w-100">
+						<img src="image/zella/zsandcastle.JPG" alt="" class="w-100">
 					</div>
 				</div>
 			</div>
@@ -188,7 +188,7 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zfashionista.JPEG" alt="" class="w-100">
+					<img src="image/zella/zfashionista.JPEG" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
