--- a/zella.html
+++ b/zella.html
@@ -145,7 +145,7 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/unicornonesie.jpg" alt="" class="w-75" height="125">
+					<img src="image/zella/unicornonesie.jpg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
@@ -180,7 +180,7 @@
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/diggin.jpg" alt="" class="w-100">
+						<img src="image/zella/diggin.jpg" alt="" class="w-100">
 					</div>
 				</div>
 			</div>
@@ -189,7 +189,7 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/Disneyland.jpeg" alt="" class="w-100">
+					<img src="image/zella/Disneyland.jpeg" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
