--- a/artwork.html
+++ b/artwork.html
@@ -144,7 +144,7 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zart1.jpeg" width="500" height="250">
+					<img src="image/zella/zart1.jpeg" width="500" height="250">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
@@ -179,7 +179,7 @@
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/zart2.jpeg" alt="" class="w-100">
+						<img src="image/zella/zart2.jpeg" alt="" class="w-100">
 					</div>
 				</div>
 			</div>
@@ -188,7 +188,7 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zart3.jpeg" alt="" class="w-100">
+					<img src="image/zella/zart3.jpeg" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
