--- a/us.html
+++ b/us.html
@@ -144,7 +144,7 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/us3.jpg" width="500" height="250">
+					<img src="image/zella/us3.jpg" width="500" height="250">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
@@ -179,7 +179,7 @@
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/us1.jpeg" alt="" class="w-100">
+						<img src="image/zella/us1.jpeg" alt="" class="w-100">
 					</div>
 				</div>
 			</div>
@@ -188,7 +188,7 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/us2.jpeg" alt="" class="w-100">
+					<img src="image/zella/us2.jpeg" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
