--- a/goals.html
+++ b/goals.html
@@ -79,7 +79,6 @@
 							<a class="navbar-item" href="house.html">House</a>
 							<a class="navbar-item" href="career.html">Career</a>
 							<a class="navbar-item" href="motorcycle.html">Motorcycle</a>
-							<a class="navbar-item" href="motherhood.html">Motherhood</a>
 						</div>
 					</li>
 					 
@@ -121,17 +120,21 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">My 8 Year Old Daughter</span>
-               <h1 class="is-capitalize text-lg">Zella</h1>
+               <span class="text-white">GOALS</span>
+               <h1 class="is-capitalize text-lg">My Goals in Life</h1>
 
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
                   <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="hobbies.html" class="text-white-50">Hobbies</a></li>
+				  <li class="list-inline-item"><a href="goals.html" class="text-white-50">Goals</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="artwork.html" class="text-white-50">Artwork</a></li>
+				  <li class="list-inline-item"><a href="degree.html" class="text-white-50">Degree</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="us.html" class="text-white-50">Us</a></li>
+				  <li class="list-inline-item"><a href="house.html" class="text-white-50">House</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="career.html" class="text-white-50">Career</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="motorcycle.html" class="text-white-50">Motorcycle</a></li>
                </ul>
             </div>
          </div>
@@ -145,20 +148,20 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zella/unicornonesie.jpg" alt="" class="w-75" height="125">
+					<img src="image/goals/goalsetting.jpg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">Introducing Zella</span>
+					<span class="text-color has-text-weight-bold">My Main Goals</span>
 					<h3 class="text-md mb-5 mt-3">
 						
 					</h3>
-					<p>Zella was born on a rainy April morning at 9:45am. She has been one of the 
-						best things to ever happen to me. She is currently 8 years old and quickly 
-						approaching 9 years of age. She is a ball of sunshine who makes it her mission 
-					    to to spread that sunshine to everyone around her. She is kind, gentle, and very 
-						caring of those around her.
+					<p>As a 38 year old single mom, I have a lot of goals I would like to achieve. 
+						I think goals are important to have as they help guide us, give us a blueprint
+						 to follow if you will. One of my favorite quote’s states, “A goal without a plan 
+						 is just a wish”. I feel this is true. If we do not have things we wish to aspire for, 
+						 how do we gain the ambition to move ahead and seize them. 
 					</p>
 				</div>
 			</div>
@@ -168,19 +171,19 @@
 			<div class="columns is-align-items-center">
 				<div class="column is-6-desktop">
 					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Extras</span>
+						<span class="text-color has-text-weight-bold">Food For Thought</span>
 						<h3 class="text-md mb-5 mt-3">
-							Fun Facts
+							What are your goals?
 						</h3>
-						<p>Zella has wanted to be a Paleontologist since she was 3. From countless documentries to books on
-						   digging up past civilizations & dinosaurs, she has been hooked. 
+						<p>Do you have any goals you'd like to achieve? In what ways do you 
+							make sure you complete them?
 						</p>
 
 					</div>
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/zella/diggin.jpg" alt="" class="w-100">
+						<img src="image/goals/10stepstoachievinggoals.jpg" alt="" class="w-100">
 					</div>
 				</div>
 			</div>
@@ -189,18 +192,19 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zella/Disneyland.jpeg" alt="" class="w-100">
+					<img src="image/goals/mygoalsart.jpeg" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info">
-					<span class="text-color has-text-weight-bold">Bonuses</span>
+					<span class="text-color has-text-weight-bold">My Goals</span>
 					<h3 class="text-md mb-5 mt-3">
-						Highlights
+						My goals on display
 					</h3>
-					<p>Zella went to Disneyland for the first time in November of 2018. 
-						You can see by that expression, Disneyland was a wonderous place for her. 
-						So many wonderful memories</p>
+					<p>I am sharing with you my goals in life. I hope you'll click
+						through the links and maybe find yourself inspired to achieve the same
+						or something similar.
+					</p>
 				</div>
 			</div>
 		</div>
