--- a/index.html
+++ b/index.html
@@ -76,13 +76,12 @@
 					</li>
 					 
 					<li class="navbar-item has-dropdown">
-						<a class="navbar-link" href="service.html">Goals</a>
+						<a class="navbar-link" href="goals.html">Goals</a>
 						<div class="navbar-dropdown">
 							<a class="navbar-item" href="degree.html">Degree</a>
 							<a class="navbar-item" href="house.html">House</a>
 							<a class="navbar-item" href="career.html">Career</a>
 							<a class="navbar-item" href="motorcycle.html">Motorcycle</a>
-							<a class="navbar-item" href="motherhood.html">Motherhood</a>
 						</div>
 					</li>
 					 
