--- a/house.html
+++ b/house.html
@@ -121,17 +121,21 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">My 8 Year Old Daughter</span>
-               <h1 class="is-capitalize text-lg">Zella</h1>
+               <span class="text-white">MY GOALS</span>
+               <h1 class="is-capitalize text-lg">Owning a Home</h1>
 
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
                   <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="hobbies.html" class="text-white-50">Hobbies</a></li>
+				  <li class="list-inline-item"><a href="goals.html" class="text-white-50">Goals</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="artwork.html" class="text-white-50">Artwork</a></li>
+				  <li class="list-inline-item"><a href="degree.html" class="text-white-50">Degree</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="us.html" class="text-white-50">Us</a></li>
+				  <li class="list-inline-item"><a href="house.html" class="text-white-50">House</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="career.html" class="text-white-50">Career</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="#" class="text-white-50">Motorcycle</a></li>
                </ul>
             </div>
          </div>
@@ -145,66 +149,27 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zella/unicornonesie.jpg" alt="" class="w-75" height="125">
+					<img src="image/goals/ownahome.jpg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">Introducing Zella</span>
+					<span class="text-color has-text-weight-bold">Being a Homeowner</span>
 					<h3 class="text-md mb-5 mt-3">
 						
 					</h3>
-					<p>Zella was born on a rainy April morning at 9:45am. She has been one of the 
-						best things to ever happen to me. She is currently 8 years old and quickly 
-						approaching 9 years of age. She is a ball of sunshine who makes it her mission 
-					    to to spread that sunshine to everyone around her. She is kind, gentle, and very 
-						caring of those around her.
+					<p>I would love to purchase a home for myself and my daughter. We currently 
+						live with my parents (not as bad as it sounds), this was the best scenario 
+						to help me save money for a down payment. I am grateful for getting along 
+						with my parents enough to live with them and it really does take a village 
+						to raise children. But with that being said, Zella and I are ready to make the 
+						next jump into a place we can call ours. 
 					</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="content-padding is-relative">
-			<div class="columns is-align-items-center">
-				<div class="column is-6-desktop">
-					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Extras</span>
-						<h3 class="text-md mb-5 mt-3">
-							Fun Facts
-						</h3>
-						<p>Zella has wanted to be a Paleontologist since she was 3. From countless documentries to books on
-						   digging up past civilizations & dinosaurs, she has been hooked. 
-						</p>
-
-					</div>
-				</div>
-				<div class="column is-6-desktop">
-					<div class="service-img">
-						<img src="image/zella/diggin.jpg" alt="" class="w-100">
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="columns is-align-items-center">
-			<div class="column is-6-desktop">
-				<div class="service-img">
-					<img src="image/zella/Disneyland.jpeg" alt="" class="w-100">
-				</div>
-			</div>
-			<div class="column is-6-desktop">
-				<div class="service-info">
-					<span class="text-color has-text-weight-bold">Bonuses</span>
-					<h3 class="text-md mb-5 mt-3">
-						Highlights
-					</h3>
-					<p>Zella went to Disneyland for the first time in November of 2018. 
-						You can see by that expression, Disneyland was a wonderous place for her. 
-						So many wonderful memories</p>
-				</div>
-			</div>
-		</div>
-	</div>
+		
 </section>
 
 
