--- a/favorites.html
+++ b/favorites.html
@@ -65,6 +65,7 @@
 					 <li class="navbar-item has-dropdown">
 						<a class="navbar-link" href="zella.html">Zella</a>
 						<div class="navbar-dropdown">
+
 							<a class="navbar-item" href="hobbies.html">Hobbies</a>
 							<a class="navbar-item" href="artwork.html">Artwork</a>
 							<a class="navbar-item" href="us.html">Us</a>
@@ -119,19 +120,25 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">Hobbies</span>
-               <h1 class="is-capitalize text-lg">Zella's Hobbies</h1>
+               <span class="text-white">FAVORITES</span>
+               <h1 class="is-capitalize text-lg">Just A Few of My Favorite Things</h1>
 
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
                   <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="zella.html" class="text-white">Zella Main</a></li>
-                  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="hobbies.html" class="text-white-50">Hobbies</a></li>
+				  <li class="list-inline-item"><a href="favorites.html" class="text-white-50">Favorites Main</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="artwork.html" class="text-white-50">Artwork</a></li>
+				  <li class="list-inline-item"><a href="music.html" class="text-white-50">Music</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="us.html" class="text-white-50">Us</a></li>
+				  <li class="list-inline-item"><a href="house.html" class="text-white-50">Travel Spots</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="career.html" class="text-white-50">Foods</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="motorcycle.html" class="text-white-50">People</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="motorcycle.html" class="text-white-50">Animals</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="motorcycle.html" class="text-white-50">Movies</a></li>
                </ul>
             </div>
          </div>
@@ -145,67 +152,30 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zella/zrollerblading.JPEG" width="500" height="250">
+					<img src="image/favorite/favoritethings.jpg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">Zella's Hobbies</span>
+					<span class="text-color has-text-weight-bold">My Favorite Things</span>
 					<h3 class="text-md mb-5 mt-3">
 						
 					</h3>
-					<p>Zella has been an artist from the beginning. She is always coloring or drawing pictures 
-						for me to take to work and hang in my cubicle. She can often be found in the backyard with 
-						Grandpa, hunting for bugs or looking for the next backyard adventure. In the summer she becomes
-						 a fish and lives in our pool. She likes to listen to music and have dance parties with anyone 
-						 who will join. She is an avid gamer now, playing her Nintendo Switch. She currently enjoys playing 
-						 Zelda: Breath of the Wild. We make as many beach trips as possible, as we both love being by the water. 
+					<p>These are a few of my favorite things…
+						Please see the links above to learn more about my favorite things. 
+						<ol>
+						<li>Music</li>
+						<li>Travel Spots</li>
+						<li>Foods</li>
+						<li>People</li>
+						<li>Animals</li>
+						<li>Movies</li>
+						
+						</ol>
 					</p>
 				</div>
 			</div>
 		</div>
-
-		<div class="content-padding is-relative">
-			<div class="columns is-align-items-center">
-				<div class="column is-6-desktop">
-					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Beach Days</span>
-						<h3 class="text-md mb-5 mt-3">
-							Beach Days Are Our Favorite
-						</h3>
-						<p>We have had many beach days in her short 8 years. One favorite of hers is to build sandcastles. 
-						</p>
-
-					</div>
-				</div>
-				<div class="column is-6-desktop">
-					<div class="service-img">
-						<img src="image/zella/zsandcastle.JPG" alt="" class="w-100">
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="columns is-align-items-center">
-			<div class="column is-6-desktop">
-				<div class="service-img">
-					<img src="image/zella/zfashionista.JPEG" alt="" class="w-100">
-				</div>
-			</div>
-			<div class="column is-6-desktop">
-				<div class="service-info">
-					<span class="text-color has-text-weight-bold">Fashion</span>
-					<h3 class="text-md mb-5 mt-3">
-						Fashionista
-					</h3>
-					<p>There is never a time this little girl isn't wanting to 
-						wear dresses and put on make-up. She is always dressing up 
-				        and being the girly-girl she is. 
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
 </section>
 
 
