--- a/travel.html
+++ b/travel.html
@@ -65,6 +65,7 @@
 					 <li class="navbar-item has-dropdown">
 						<a class="navbar-link" href="zella.html">Zella</a>
 						<div class="navbar-dropdown">
+
 							<a class="navbar-item" href="hobbies.html">Hobbies</a>
 							<a class="navbar-item" href="artwork.html">Artwork</a>
 							<a class="navbar-item" href="us.html">Us</a>
@@ -119,19 +120,25 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">Hobbies</span>
-               <h1 class="is-capitalize text-lg">Zella's Hobbies</h1>
+               <span class="text-white">MY FAVORITES</span>
+               <h1 class="is-capitalize text-lg">Travel Spots</h1>
 
                <ul class="list-inline breadcumb-nav">
-                  <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
-                  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="zella.html" class="text-white">Zella Main</a></li>
-                  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="hobbies.html" class="text-white-50">Hobbies</a></li>
-				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="artwork.html" class="text-white-50">Artwork</a></li>
-				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="us.html" class="text-white-50">Us</a></li>
+				<li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="favorites.html" class="text-white-50">Favorites Main</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="music.html" class="text-white-50">Music</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="travel.html" class="text-white-50">Travel Spots</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="career.html" class="text-white-50">Foods</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="motorcycle.html" class="text-white-50">People</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="motorcycle.html" class="text-white-50">Animals</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="motorcycle.html" class="text-white-50">Movies</a></li>
                </ul>
             </div>
          </div>
@@ -145,21 +152,20 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zella/zrollerblading.JPEG" width="500" height="250">
+					<img src="image/travel/roadtrip.jpg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">Zella's Hobbies</span>
+					<span class="text-color has-text-weight-bold">My Favorite Spots</span>
 					<h3 class="text-md mb-5 mt-3">
-						
+						Road Trip Destinations
 					</h3>
-					<p>Zella has been an artist from the beginning. She is always coloring or drawing pictures 
-						for me to take to work and hang in my cubicle. She can often be found in the backyard with 
-						Grandpa, hunting for bugs or looking for the next backyard adventure. In the summer she becomes
-						 a fish and lives in our pool. She likes to listen to music and have dance parties with anyone 
-						 who will join. She is an avid gamer now, playing her Nintendo Switch. She currently enjoys playing 
-						 Zelda: Breath of the Wild. We make as many beach trips as possible, as we both love being by the water. 
+					<p>I find so much joy in road trips. There is nothing like escaping for the weekend. 
+						Zella and I often take day trips to the beach, the mountains, or Yosemite. We 
+						are very fortunate living in Central California because everything is fairly 
+						close by. California really offers so many beautiful destinations. Last year, 
+						Zella and I took a trip to Colorado to visit my brother and his family. Colorado is so stunningly beautiful. So many happy trees. 
 					</p>
 				</div>
 			</div>
@@ -169,18 +175,19 @@
 			<div class="columns is-align-items-center">
 				<div class="column is-6-desktop">
 					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Beach Days</span>
+						<span class="text-color has-text-weight-bold">Extras</span>
 						<h3 class="text-md mb-5 mt-3">
-							Beach Days Are Our Favorite
+							Fun Facts
 						</h3>
-						<p>We have had many beach days in her short 8 years. One favorite of hers is to build sandcastles. 
+						<p>Zella has wanted to be a Paleontologist since she was 3. From countless documentries to books on
+						   digging up past civilizations & dinosaurs, she has been hooked. 
 						</p>
 
 					</div>
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/zella/zsandcastle.JPG" alt="" class="w-100">
+						<img src="image/zella/diggin.jpg" alt="" class="w-100">
 					</div>
 				</div>
 			</div>
@@ -189,19 +196,18 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/zella/zfashionista.JPEG" alt="" class="w-100">
+					<img src="image/zella/Disneyland.jpeg" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info">
-					<span class="text-color has-text-weight-bold">Fashion</span>
+					<span class="text-color has-text-weight-bold">Bonuses</span>
 					<h3 class="text-md mb-5 mt-3">
-						Fashionista
+						Highlights
 					</h3>
-					<p>There is never a time this little girl isn't wanting to 
-						wear dresses and put on make-up. She is always dressing up 
-				        and being the girly-girl she is. 
-					</p>
+					<p>Zella went to Disneyland for the first time in November of 2018. 
+						You can see by that expression, Disneyland was a wonderous place for her. 
+						So many wonderful memories</p>
 				</div>
 			</div>
 		</div>
