--- a/artwork.html
+++ b/artwork.html
@@ -125,6 +125,8 @@
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
                   <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="zella.html" class="text-white">Zella Main</a></li>
+                  <li class="list-inline-item"><span class="text-white">/</span></li>
 				  <li class="list-inline-item"><a href="hobbies.html" class="text-white-50">Hobbies</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
 				  <li class="list-inline-item"><a href="artwork.html" class="text-white-50">Artwork</a></li>
