--- a/career.html
+++ b/career.html
@@ -126,7 +126,7 @@
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
                   <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="goals.html" class="text-white-50">Goals</a></li>
+				  <li class="list-inline-item"><a href="goals.html" class="text-white-50">Goals Main</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
 				  <li class="list-inline-item"><a href="degree.html" class="text-white-50">Degree</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
@@ -134,7 +134,7 @@
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
 				  <li class="list-inline-item"><a href="career.html" class="text-white-50">Career</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="#" class="text-white-50">Motorcycle</a></li>
+				  <li class="list-inline-item"><a href="motorcycle.html" class="text-white-50">Motorcycle</a></li>
                </ul>
             </div>
          </div>
