--- a/us.html
+++ b/us.html
@@ -78,7 +78,6 @@
 							<a class="navbar-item" href="house.html">House</a>
 							<a class="navbar-item" href="career.html">Career</a>
 							<a class="navbar-item" href="motorcycle.html">Motorcycle</a>
-							<a class="navbar-item" href="motherhood.html">Motherhood</a>
 						</div>
 					</li>
 					 
@@ -125,6 +124,8 @@
 
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
+                  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="zella.html" class="text-white">Zella Main</a></li>
                   <li class="list-inline-item"><span class="text-white">/</span></li>
 				  <li class="list-inline-item"><a href="hobbies.html" class="text-white-50">Hobbies</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
